--- a/p1/index.html
+++ b/p1/index.html
@@ -9,31 +9,33 @@
 </head>
 
 <body>
+    <div class="navbar">
+        <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="project.html">Projects</a>
+    </div>
     <script src="/example.js"></script>
-    <h1 style="color:blue; text-align:center;">Tanuja Khatun</h1>
+    <h1  text-align:center;">Tanuja Khatun</h1>
     <p>I am passionate about learning new things and growing every day.</p>
 
     <img src="https://www.gardendesign.com/pictures/images/675x529Max/site_3/blue-cornflower-centaurea-cyanus-bachelor-s-buttons-american-meadows_15609.jpg"
         height="300px" width="350px" />
-    <ul style="list-style-type:circle;">
+    <ul>
         <li>Learning Web Development</li>
         <li>Exploring new places</li>
         <li>Listening to Music</li>
 
     </ul>
-    <p><a style="color:blue; text-align:center;" href="about.html" target="_blank">About Me</a></p>
-    <p><a style="color:blue; text-align:center;" href="project .html" target="_blank">My Projects</a>
-    </p>
     <hr />
-    <h2 style="color:teal; text-align:center">Contact Me</h2>
-    <form style="text-align: center;">
-        <p style="text-align: center;">Email:<a href="mailto:tanujakhatun2512@gmail.com">tanujakhatun2512@gmail.com</a>
+    <h2 >Contact Me</h2>
+    <form >
+        <p >Email:<a href="mailto:tanujakhatun2512@gmail.com">tanujakhatun2512@gmail.com</a>
         </p>
-        <label for="message">Your Message:</label><br>
         <textarea id="message" rows="5" cols="40" placeholder="your message here..."></textarea> <br><br>
         <input type="submit" value="Send">
 
     </form>
+    
 </body>
 
 </html>
